ra88: moved presenter usages from Razor into WageViewModel properties

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
@@ -6,7 +6,7 @@
 <div>
     <h3 class="bold-small">@Model.Wage.Unit.GetHeaderDisplayText()</h3>
     <p id="vacancy-wage">
-        @WagePresenter.GetDisplayAmount(Model.Wage.Type, Model.Wage.Amount, Model.Wage.Text, Model.Wage.Unit, Model.Wage.HoursPerWeek)
+        @Model.Wage.DisplayAmount
     </p>
 </div>
 
