Prevent autosave when clicking some of the buttons of the form.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/TrainingDetails.cshtml
@@ -19,11 +19,11 @@
     }
 
     <div class="form-group">
-        <button id="createVacancyButton" type="submit" class="button" name="TrainingDetails" value="@saveButtonValue">@saveButtonText</button>
-        <button id="createVacancyAndExit" type="submit" class="button-link" name="TrainingDetails" value="TrainingDetailsAndExit">Save and exit</button>
+        <button id="createVacancyButton" type="submit" class="button no-autosave" name="TrainingDetails" value="@saveButtonValue">@saveButtonText</button>
+        <button id="createVacancyAndExit" type="submit" class="button-link no-autosave" name="TrainingDetails" value="TrainingDetailsAndExit">Save and exit</button>
         @if (Model.ComeFromPreview)
         {
-            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
+            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new {@class = "no-autosave" })
         }
     </div>
 }
