--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -14,8 +14,8 @@
     @Html.DisplayFor(m => m, LocationSearchViewModel.PartialView)
 
     var saveButtonText = (Model.Status == VacancyStatus.Referred || Model.ComeFromPreview) ? "Save and return to Preview" : "Save and continue";
-    <button type="submit" class="button" name="AddLocations" value="Locations">@saveButtonText</button>
-    @Html.RouteLink("Return to previous page", RecruitmentRouteNames.ConfirmEmployer, new { providerSiteId = Model.ProviderSiteId, edsUrn = Model.EmployerEdsUrn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview, useEmployerLocation = true })
+    <button type="submit" class="button no-autosave" name="AddLocations" value="Locations">@saveButtonText</button>
+    @Html.RouteLink("Return to previous page", RecruitmentRouteNames.ConfirmEmployer, new { providerSiteId = Model.ProviderSiteId, edsUrn = Model.EmployerEdsUrn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview, useEmployerLocation = true }, new {@class = "no-autosave" })
 }
 
 @section scripts {
@@ -53,16 +53,4 @@
     @Scripts.Render("~/bundles/location")
 
     @Scripts.Render("~/bundles/autosave")
-
-    @*<script>
-            var autoSaveTimeout = @Html.Raw(Json.Encode(Model.AutoSaveTimeoutInSeconds)) * 1000;
-
-            $(window).on('load', function() {
-                autoSave.initialise({
-                    formSelector: "form",
-                    timeout: autoSaveTimeout,
-                    postUrl: '@Url.RouteUrl(RecruitmentRouteNames.AutoSaveLocations)'
-                });
-            });
-    </script>*@
 }
