--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -44,10 +44,21 @@
             </div>
             <div class="grid grid-1-2">
                 <label class="form-label">Change team</label>
-                @Html.DropDownListFor(m => m.AgencyUser.RegionalTeam, Model.AgencyUser.RegionalTeams, new { id = "regional-team", @class = "chosen-select grid grid-1-1" })
+                @Html.DropDownListFor(m => m.AgencyUser.RegionalTeam, Model.AgencyUser.RegionalTeams, new {id = "regional-team", @class = "chosen-select grid grid-1-1"})
                 <noscript>
                     <button class="button" name="DashboardAction" value="ChangeTeam">Change team</button>
                 </noscript>
+            </div>
+            <div class="grid grid-1-2">
+                &nbsp;
+            </div>
+            <div class="grid grid-1-2">
+                <label class="form-label" style="margin-top: 10px">Provider</label>
+                @Html.TextBoxFor(m => m.VacancySummaries.SearchViewModel.Provider, new { @class = "grid grid-1-1" })
+                <div>
+                    @Html.RouteLink("Clear", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(), new {@class = "button-link", style = "padding-top: 17px; margin-bottom: 0" })
+                    <button class="button" style="margin: 10px 0 0 0" name="DashboardAction" value="SearchVacancies">Search vacancies</button>
+                </div>
             </div>
         </div>
 
@@ -55,22 +66,25 @@
             <div class="grid grid-1-1">
                 <nav class="tabbed-nav">
                     @{
-                        var reviewTabControlClass = Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Review ? " active" : "";
-                        var metricsTabControlClass = Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Metrics ? " active" : "";
+                        var dashboardVacancySummariesSearchViewModel = Model.VacancySummaries.SearchViewModel;
+                        var reviewTabControlClass = dashboardVacancySummariesSearchViewModel.Mode == DashboardVacancySummariesMode.Review ? " active" : "";
+                        var metricsTabControlClass = dashboardVacancySummariesSearchViewModel.Mode == DashboardVacancySummariesMode.Metrics ? " active" : "";
+                        var reviewTitle = !string.IsNullOrEmpty(dashboardVacancySummariesSearchViewModel.Provider) ? dashboardVacancySummariesSearchViewModel.Provider + "'s" : Model.AgencyUser.RegionalTeam.GetTitle();
                     }
-                    @Html.RouteLink(Model.AgencyUser.RegionalTeam.GetTitle() + " vacancies", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummariesMode.Review), new {@class = "tabbed-tab no-js" + reviewTabControlClass})
-                    @Html.RouteLink("All teams", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.VacancySummaries.SearchViewModel, DashboardVacancySummariesMode.Metrics), new {@class = "tabbed-tab no-js" + metricsTabControlClass})
+
+                    @Html.RouteLink(reviewTitle + " vacancies", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(dashboardVacancySummariesSearchViewModel, DashboardVacancySummariesMode.Review), new {@class = "tabbed-tab no-js" + reviewTabControlClass})
+                    @Html.RouteLink("All teams", ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(dashboardVacancySummariesSearchViewModel, DashboardVacancySummariesMode.Metrics), new {@class = "tabbed-tab no-js" + metricsTabControlClass})
                 </nav>
             </div>
         </div>
 
         <div class="tabbed-content active width-all-1-1">
-            @if (Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Review)
+            @if (dashboardVacancySummariesSearchViewModel.Mode == DashboardVacancySummariesMode.Review)
             {
                 @Html.Partial("_DashboardVacancyCounts", Model.VacancySummaries)
                 @Html.Partial("_DashboardVacancySummaries", Model.VacancySummaries)
             }
-            @if(Model.VacancySummaries.SearchViewModel.Mode == DashboardVacancySummariesMode.Metrics)
+            @if(dashboardVacancySummariesSearchViewModel.Mode == DashboardVacancySummariesMode.Metrics)
             {
                 @Html.Partial("_DashboardTeamMetrics", Model)
             }
