1.Fix failing test in teamcity 2. Add new test for delete account functionality.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
@@ -212,7 +212,7 @@
         </div>
 
         <div class="tabbed-content @deleteAccountTabClass">
-            <h2 class="heading-large" id="savedSearchHeading">Delete your account</h2>
+            <h2 class="heading-large" id="deleteAccountHeading">Delete your account</h2>
             <div class="panel-indent">
                 <p class="text">If you are no longer interested in applying for apprenticeships or traineeship, you can delete your account here.</p>
             </div>
