--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/Delete.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/Delete.cshtml
@@ -4,7 +4,7 @@
 @using SFA.Apprenticeships.Web.Recruit.Constants
 
 @{
-    ViewBag.Title = "Recruit an Apprentice - Delete a draft vacancy";
+    ViewBag.Title = "Recruit an Apprentice - Delete a vacancy";
     var vacancyTitle = string.IsNullOrEmpty(Model.VacancyTitle) ? "(No Title)" : Model.VacancyTitle;
 }
 
