Spell check on preview page using spellcheck attribute and jquery.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
@@ -24,3 +24,9 @@
         </section>
     }
 </div>
+
+@section scripts{
+    <script>        
+        $("#vacancy-full-descrpition").focus();        
+    </script>
+}
