remove preserve formatting class.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
@@ -26,7 +26,8 @@
 </div>
 
 @section scripts{
-    <script>        
+    <script> 
+        $("#vacancy-full-descrpition").removeClass("preserve-formatting");
         $("#vacancy-full-descrpition").focus();        
     </script>
 }
